k8s/12-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: reciplore
spec:
  selector:
    app: mongo
  ports:
  - port: 27017
