k8s/14-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: reciplore-zero-trust
  namespace: reciplore
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
        - podSelector:
            matchLabels:
              app: backend

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: backend
        - podSelector:
            matchLabels:
              app: mongo
